k8s/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: payment-gateway
  labels:
    istio-injection: enabled
