k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-gateway-api
  namespace: payment-gateway
  labels:
    app: payment-gateway-api
spec:
  type: ClusterIP
  selector:
    app: payment-gateway-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
