k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payment-gateway-api
  namespace: payment-gateway
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: api.your-domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: payment-gateway-api
                port:
                  number: 80
